# distributed-job-queue

./: .gitignore  CMakeLists.txt  README.md  run_bench.sh
benchmark/: CMakeLists.txt
benchmark/include/benchmark/: benchmark_report.hpp  benchmark_runner.hpp  load_generator.hpp  metrics_client.hpp  workload_profile.hpp
benchmark/src/: benchmark_main.cpp  benchmark_report.cpp  benchmark_runner.cpp  load_generator.cpp  metrics_client.cpp
client_lib/: CMakeLists.txt
client_lib/include/client/: job_client.hpp
client_lib/src/: client_main.cpp  job_client.cpp
cmake/: CompilerOptions.cmake
common/: CMakeLists.txt
common/include/common/: job.hpp  logger.hpp  result.hpp  stop_source.hpp  uuid.hpp
common/src/: logger.cpp  uuid.cpp
demo/: CMakeLists.txt  phase1_demo.cpp
manager/: CMakeLists.txt
manager/include/manager/: job_manager.hpp  lease_manager.hpp  priority_queue.hpp  worker_registry.hpp
manager/src/: job_manager.cpp  lease_manager.cpp  priority_queue.cpp  worker_registry.cpp
metrics/: CMakeLists.txt
metrics/include/metrics/: counter.hpp  gauge.hpp  histogram.hpp  http_metrics_server.hpp  latency_tracker.hpp  metrics_registry.hpp  metrics_reporter.hpp
metrics/src/: histogram.cpp  http_metrics_server.cpp  latency_tracker.cpp  metrics_registry.cpp  metrics_reporter.cpp
net/: CMakeLists.txt
net/include/net/: event_loop.hpp  json_util.hpp  protocol.hpp  socket_utils.hpp  tcp_connection.hpp
net/src/: event_loop.cpp  protocol.cpp  socket_utils.cpp  tcp_connection.cpp
server/: CMakeLists.txt
server/include/server/: server.hpp
server/src/: main.cpp  server.cpp
storage/: CMakeLists.txt
storage/include/storage/: i_storage_backend.hpp  in_memory_backend.hpp  sqlite_backend.hpp
storage/src/: in_memory_backend.cpp  sqlite_backend.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_metrics_accuracy.cpp  test_metrics_endpoint.cpp  test_net_integration.cpp  test_phase3_integration.cpp
tests/unit/: CMakeLists.txt  test_counter.cpp  test_gauge.cpp  test_histogram.cpp  test_job_manager.cpp  test_latency_tracker.cpp  test_lease_manager.cpp  test_metrics_registry.cpp  test_priority_queue.cpp  test_protocol.cpp  test_storage.cpp  test_worker.cpp  test_worker_registry.cpp
worker/: CMakeLists.txt
worker/include/worker/: handler_registry.hpp  worker.hpp
worker/src/: handler_registry.cpp  worker.cpp
worker_process/: CMakeLists.txt
worker_process/include/worker_process/: tcp_worker.hpp
worker_process/src/: tcp_worker.cpp  worker_main.cpp
